[#134] Migrate from cJSON to nlohmann-json

--- a/lib/irods_dsi/CMakeLists.txt
+++ b/lib/irods_dsi/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(
 	PRIVATE
 	irods_client
 	fmt::fmt
+	nlohmann_json::nlohmann_json
 	Globus::common
 	Globus::gridftp_server
 )
