[#74,irods/irods#7265] Add test RPATH logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,13 @@ if (IRODS_ENABLE_ALL_TESTS)
 	set(IRODS_BUILD_TESTS ON CACHE BOOL "${IRODS_BUILD_TESTS_DOCSTR}" FORCE)
 endif()
 
+if (DEFINED IRODS_UNIT_TESTS_BUILD_WITH_INSTALL_RPATH_INIT)
+  set(_IRODS_TESTS_BUILD_WITH_INSTALL_RPATH_DEFAULT ${IRODS_UNIT_TESTS_BUILD_WITH_INSTALL_RPATH_INIT})
+else()
+  set(_IRODS_TESTS_BUILD_WITH_INSTALL_RPATH_DEFAULT NO)
+endif()
+set(IRODS_TESTS_BUILD_WITH_INSTALL_RPATH "${_IRODS_TESTS_BUILD_WITH_INSTALL_RPATH_DEFAULT}" CACHE BOOL "Build tests with install RPATH/RUNPATH")
+
 add_subdirectory(lib)
 
 include(IrodsCPackCommon)
